[package]
name = "walnut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
memmap2 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
crc32fast = "1.2.0"
clap = { version = "4.4.8", features = ["derive"] }
