[package]
name = "walnut"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
description = "# Walnut File Systwm\nExperimental file system with inode level encryption."
version = "0.1.5"
edition = "2021"
license = "GPL3"
homepage = "https://github.com/mezeipetister/walnut"
repository = "https://github.com/mezeipetister/walnut"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
memmap2 = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
crc32fast = "1.2.0"
clap = { version = "4.4.8", features = ["derive"] }
